<resources>
    <string name="app_name">ContactosSQLite</string>
    <string name="lblNombre">Nombre:</string>
    <string name="pistaNombre">Nombre</string>
    <string name="lblApellido">Apellido</string>
    <string name="pistaApellido">Apellido</string>
    <string name="lblTelefono">Telefono</string>
    <string name="pistaTelefono">Telefono</string>
    <string name="lblEmail">Email</string>
    <string name="pistaEmail">Email</string>
    <string name="btCancelar">Cancelar</string>
    <string name="btGuardar">Guardar</string>
    <string name="btBuscar">Buscar</string>
    <string name="opModificar">Modificar</string>
    <string name="opEliminiar">Eliminar</string>
    <string name="añadir">Añadir</string>
    <string name="tablaNombre">nombreTabla</string>
    <string name="tablaApellido">tablaApellido</string>
    <string name="tablaEmail">tablaEmail</string>
    <string name="tablaTelefono">tablaTelefono</string>
    <string name="Email">Email:</string>
    <string name="a_adir">Añadir</string>
    <string name="buscar">Buscar</string>
</resources>
