<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="3dip"
            android:text="@string/lblNombre"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tablaNombre"
            android:layout_width="match_parent"
            android:padding="3dip"
            android:text="@string/lblNombre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left"
            android:padding="3dip"
            android:text="@string/lblApellido" />

        <TextView
            android:id="@+id/tablaApellido"
            android:padding="3dip"
            android:text="@string/tablaApellido"
            android:textAlignment="center" />
    </TableRow>


    <TableRow>

        <TextView
            android:layout_width="0dp"

            android:padding="3dip"
            android:text="@string/Email"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tablaEmail"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:padding="3dip"
            android:text="@string/lblEmail" />

        <TextView
            android:padding="3dip"
            android:text="@string/lblTelefono" />

        <TextView
            android:id="@+id/tablaTelef"

            android:layout_width="211dp"
            android:padding="3dip"
            android:text="@string/lblTelefono"
            android:textAlignment="center" />
    </TableRow>
</TableLayout>
